--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>CopyingIO</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/c/font_4245399_ybw829muyki.css" />
   </head>
   <body>
