--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="" /> -->
+    <link rel="icon"
+          type="image/svg+xml"
+          href="/src/assets/images/public/copy-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CopyingIO</title>
+    <title>copyingio</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/c/font_4245399_ybw829muyki.css" />
   </head>
   <body>
