--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon"
-          type="image/svg+xml"
-          href="/src/assets/images/public/copy-icon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/images/public/copy-icon.svg"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>copyingio</title>
-    <link rel="stylesheet" href="//at.alicdn.com/t/c/font_4245399_ybw829muyki.css" />
+    <link
+      rel="stylesheet"
+      href="//at.alicdn.com/t/c/font_4245399_ybw829muyki.css"
+    />
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script
+      type="module"
+      src="/src/main.ts"
+    ></script>
   </body>
 </html>
